--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@ configFile.withReader {
 }
 
 version = "${config.mod_version}"
-group = "com.pengu.${config.mod_id}"
-archivesBaseName = "${config.mod_id_fancy}-${config.minecraft_version}"
+group = "com.pengu.hammercore"
+archivesBaseName = "HammerCore-${config.minecraft_version}"
 
 sourceCompatibility = targetCompatibility = "1.8"
 compileJava {
@@ -35,24 +35,12 @@ compileJava {
 }
 
 minecraft {
-    version = "${config.minecraft_version}-${config.forge_version}"
+    version = "${config.forge_version}"
     runDir = "run"
-    mappings = "${config.mcp}"
+    mappings = "${config.mappings}"
     makeObfSourceJar = false
-	replace 'required-after:hammercore', "required-after:hammercore@[${config.hc_version},)"
     replace '@VERSION@', "${config.mod_version}"
 	replace '@FINGERPRINT@', project.findProperty('signSHA1')
-}
-
-repositories {
-	maven {
-        name = "APengu Maven"
-        url = "http://apengu.github.io/PenguLibs"
-    }
-}
-
-dependencies {
-	deobfCompile "apengu:HammerCore:${config.minecraft_version}-${config.hc_version}:deobf"
 }
 
 processResources
@@ -75,7 +63,9 @@ task deobfJar(type: Jar) {
     from sourceSets.main.output
     classifier = 'deobf'
     manifest {
-        attributes 'FMLAT': "${config.mod_id}_at.cfg"
+        attributes 'FMLCorePlugin': 'com.pengu.hammercore.asm.HammerCoreCore'
+		attributes 'FMLCorePluginContainsFMLMod': 'false'
+		attributes 'FMLAT': 'hc_at.cfg'
     }
 }
 
@@ -83,7 +73,9 @@ task srcJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
     classifier = 'sources'
 	manifest {
-        attributes 'FMLAT': "${config.mod_id}_at.cfg"
+        attributes 'FMLCorePlugin': 'com.pengu.hammercore.asm.HammerCoreCore'
+		attributes 'FMLCorePluginContainsFMLMod': 'false'
+		attributes 'FMLAT': 'hc_at.cfg'
     }
 }
 
@@ -103,8 +95,10 @@ build.dependsOn signJar
 
 jar {
 	manifest {
-		attributes 'FMLAT': "${config.mod_id}_at.cfg"
-	}
+        attributes 'FMLCorePlugin': 'com.pengu.hammercore.asm.HammerCoreCore'
+		attributes 'FMLCorePluginContainsFMLMod': 'false'
+		attributes 'FMLAT': 'hc_at.cfg'
+    }
 }
 
 artifacts {
@@ -115,7 +109,7 @@ artifacts {
 curseforge {
 	apiKey = System.env.CURSEFORGE_API_KEY
 	project {
-		id = "${config.cf_project}"
+		id = "${config.project_id}"
 		changelogType = 'html'
 		changelog = ""
 		releaseType = "${config.release_type}"
