--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,23 @@ repositories {
         name = "jei"
         url =  "http://dvs1.progwml6.com/files/maven"
     }
+	maven {
+		name = "HWYLA"
+		url = "http://tehnut.info/maven"
+	}
+	maven {
+		name "TheOneProbe"
+		url "http://maven.tterrag.com/"
+	}
+    maven {
+        name = "CoFH Maven"
+        url = "http://maven.covers1624.net"
+    }
 }
 
 dependencies {
+	deobfCompile "mcp.mobius.waila:Hwyla:1.8.24-B39_1.12"
+	deobfCompile "mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.22-13"
     deobfCompile "mezz.jei:jei_${config.minecraft_version}:${config.jei_version}:api"
     runtime "mezz.jei:jei_${config.minecraft_version}:${config.jei_version}"
 }
