Couple fixes, and new handy events.

--- a/src/main/resources/hc_at.cfg
+++ b/src/main/resources/hc_at.cfg
@@ -23,6 +23,9 @@ public net.minecraft.server.management.PlayerList field_72405_c # maxPlayers
 public net.minecraft.util.SoundEvent field_187506_b # soundName
 public net.minecraft.util.SoundEvent func_187502_a(Ljava/lang/String;)V # registerSound
 
+public net.minecraft.util.EnumParticleTypes field_179365_U # PARTICLES
+public net.minecraft.util.EnumParticleTypes field_186837_Z # BY_NAME
+
 public net.minecraft.client.particle.ParticleManager field_78876_b # fxLayers
 public net.minecraft.client.particle.Particle field_187126_f # posX
 public net.minecraft.client.particle.Particle field_187127_g # posY
