--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,11 @@ compileJava {
 }
 
 repositories {
+	mavenCentral()
+    maven {
+        name = "thiakil"
+        url = "http://maven.thiakil.com"
+    }
     maven {
         name = "jei"
         url =  "http://dvs1.progwml6.com/files/maven"
@@ -62,6 +67,7 @@ dependencies {
 	deobfCompile "mcp.mobius.waila:Hwyla:1.8.24-B39_1.12"
 	deobfCompile "mcjty.theoneprobe:TheOneProbe-1.12:1.12-1.4.22-13"
     deobfCompile "mezz.jei:jei_${config.minecraft_version}:${config.jei_version}:api"
+	deobfCompile "com.azanor.baubles:Baubles:1.12-1.5.2"
     runtime "mezz.jei:jei_${config.minecraft_version}:${config.jei_version}"
 }
 
@@ -190,7 +196,7 @@ task makeChangelog(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
 <h1>Changes:</h1>
   <ul>
     {{#commits}}
-    <li> <a href="https://github.com/Zeitheron/HammerCore/commit/{{hash}}" target=_blank> {{{message}}}</a>
+    <li> <a href="https://gitlab.com/Zeitheron/HammerCore/commit/{{hash}}" target=_blank> {{{message}}}</a>
 </li>
     {{/commits}}
   </ul>
