--- a/src/main/resources/hc_at.cfg
+++ b/src/main/resources/hc_at.cfg
@@ -17,15 +17,6 @@ public net.minecraft.client.renderer.debug.DebugRenderer field_190082_h # height
 public net.minecraft.client.renderer.debug.DebugRenderer field_191326_j # renderCollision
 public net.minecraft.client.renderer.block.model.ModelBakery field_177605_n # bakedRegistry
 public net.minecraft.client.renderer.texture.TextureManager field_110585_a # mapTextureObjects
-
-public net.minecraft.server.management.PlayerList field_72405_c # maxPlayers
-
-public net.minecraft.util.SoundEvent field_187506_b # soundName
-public net.minecraft.util.SoundEvent func_187502_a(Ljava/lang/String;)V # registerSound
-
-public net.minecraft.util.EnumParticleTypes field_179365_U # PARTICLES
-public net.minecraft.util.EnumParticleTypes field_186837_Z # BY_NAME
-
 public net.minecraft.client.particle.ParticleManager field_78876_b # fxLayers
 public net.minecraft.client.particle.Particle field_187126_f # posX
 public net.minecraft.client.particle.Particle field_187127_g # posY
@@ -40,15 +31,52 @@ public net.minecraft.client.particle.Particle field_70552_h # particleRed
 public net.minecraft.client.particle.Particle field_70553_i # particleGreen
 public net.minecraft.client.particle.Particle field_70551_j # particleBlue
 public net.minecraft.client.particle.Particle field_82339_as # particleAlpha
-
 public net.minecraft.client.gui.inventory.GuiContainer field_147003_i # guiLeft
 public net.minecraft.client.gui.inventory.GuiContainer field_147009_r # guiTop
+public net.minecraft.client.gui.inventory.GuiContainer field_147006_u # hoveredSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_147005_v # clickedSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_147004_w # isRightMouseClick
+public net.minecraft.client.gui.inventory.GuiContainer field_147012_x # draggedStack
+public net.minecraft.client.gui.inventory.GuiContainer field_146994_N # touchUpX
+public net.minecraft.client.gui.inventory.GuiContainer field_147011_y # touchUpY
+public net.minecraft.client.gui.inventory.GuiContainer field_146989_A # returningStackDestSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_146990_B # returningStackTime
+public net.minecraft.client.gui.inventory.GuiContainer field_146991_C # returningStack
+public net.minecraft.client.gui.inventory.GuiContainer field_146985_D # currentDragTargetSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_146986_E # dragItemDropDelay
+public net.minecraft.client.gui.inventory.GuiContainer field_146987_F # dragSplittingLimit
+public net.minecraft.client.gui.inventory.GuiContainer field_146988_G # dragSplittingButton
+public net.minecraft.client.gui.inventory.GuiContainer field_146995_H # ignoreMouseUp
+public net.minecraft.client.gui.inventory.GuiContainer field_146996_I # dragSplittingRemnant
+public net.minecraft.client.gui.inventory.GuiContainer field_146997_J # lastClickTime
+public net.minecraft.client.gui.inventory.GuiContainer field_146994_N # lastClickSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_146988_G # lastClickButton
+public net.minecraft.client.gui.inventory.GuiContainer field_146993_M # doubleClick
+public net.minecraft.client.gui.inventory.GuiContainer field_146994_N # shiftClickedSlot
+public net.minecraft.client.gui.inventory.GuiContainer func_146977_a(Lnet/minecraft/inventory/Slot;)V
+public net.minecraft.client.gui.inventory.GuiContainer func_146981_a(Lnet/minecraft/inventory/Slot;II)Z # isMouseOverSlot
+public net.minecraft.client.gui.inventory.GuiContainer func_146980_g()V # updateDragSplitting
 public net.minecraft.client.gui.inventory.GuiBrewingStand field_175384_v # playerInventory
 public net.minecraft.client.gui.inventory.GuiBrewingStand field_147013_v # tileBrewingStand
 public net.minecraft.client.gui.inventory.GuiFurnace field_175383_v # playerInventory
 public net.minecraft.client.gui.inventory.GuiFurnace field_147086_v # tileFurnace
 public net.minecraft.client.gui.GuiMainMenu field_73979_m # panoramaTimer
+public net.minecraft.client.gui.GuiMainMenu field_73975_c # splashText
 public net.minecraft.client.gui.GuiNewChat field_146253_i # drawnChatLines
+public net.minecraft.client.gui.GuiChat field_146415_a # inputField
 public net.minecraft.client.gui.GuiIngame field_73837_f # updateCounter
-
 public net.minecraft.client.multiplayer.PlayerControllerMP field_78770_f # curBlockDamageMP
+
+public net.minecraft.server.management.PlayerList field_72405_c # maxPlayers
+
+public net.minecraft.util.EnumParticleTypes field_179365_U # PARTICLES
+public net.minecraft.util.EnumParticleTypes field_186837_Z # BY_NAME
+public net.minecraft.util.SoundEvent field_187506_b # soundName
+public net.minecraft.util.SoundEvent func_187502_a(Ljava/lang/String;)V # registerSound
+
+public net.minecraft.entity.item.EntityItem field_70292_b # age
+public net.minecraft.entity.player.PlayerCapabilities field_75096_f # flySpeed
+public net.minecraft.entity.player.PlayerCapabilities field_75097_g # walkSpeed
+public net.minecraft.entity.EntityLivingBase field_184617_aD # ticksSinceLastSwing
+
+public net.minecraft.world.World field_73021_x # eventListeners
