--- a/src/main/resources/hc_at.cfg
+++ b/src/main/resources/hc_at.cfg
@@ -37,8 +37,8 @@ public net.minecraft.client.gui.inventory.GuiContainer field_147006_u # hoveredS
 public net.minecraft.client.gui.inventory.GuiContainer field_147005_v # clickedSlot
 public net.minecraft.client.gui.inventory.GuiContainer field_147004_w # isRightMouseClick
 public net.minecraft.client.gui.inventory.GuiContainer field_147012_x # draggedStack
-public net.minecraft.client.gui.inventory.GuiContainer field_146994_N # touchUpX
-public net.minecraft.client.gui.inventory.GuiContainer field_147011_y # touchUpY
+public net.minecraft.client.gui.inventory.GuiContainer field_147011_y # touchUpX
+public net.minecraft.client.gui.inventory.GuiContainer field_147010_z # touchUpY
 public net.minecraft.client.gui.inventory.GuiContainer field_146989_A # returningStackDestSlot
 public net.minecraft.client.gui.inventory.GuiContainer field_146990_B # returningStackTime
 public net.minecraft.client.gui.inventory.GuiContainer field_146991_C # returningStack
@@ -49,8 +49,8 @@ public net.minecraft.client.gui.inventory.GuiContainer field_146988_G # dragSpli
 public net.minecraft.client.gui.inventory.GuiContainer field_146995_H # ignoreMouseUp
 public net.minecraft.client.gui.inventory.GuiContainer field_146996_I # dragSplittingRemnant
 public net.minecraft.client.gui.inventory.GuiContainer field_146997_J # lastClickTime
-public net.minecraft.client.gui.inventory.GuiContainer field_146994_N # lastClickSlot
-public net.minecraft.client.gui.inventory.GuiContainer field_146988_G # lastClickButton
+public net.minecraft.client.gui.inventory.GuiContainer field_146998_K # lastClickSlot
+public net.minecraft.client.gui.inventory.GuiContainer field_146992_L # lastClickButton
 public net.minecraft.client.gui.inventory.GuiContainer field_146993_M # doubleClick
 public net.minecraft.client.gui.inventory.GuiContainer field_146994_N # shiftClickedSlot
 public net.minecraft.client.gui.inventory.GuiContainer func_146977_a(Lnet/minecraft/inventory/Slot;)V
