--- a/src/main/resources/hc_at.cfg
+++ b/src/main/resources/hc_at.cfg
@@ -66,6 +66,8 @@ public net.minecraft.client.gui.GuiNewChat field_146253_i # drawnChatLines
 public net.minecraft.client.gui.GuiChat field_146415_a # inputField
 public net.minecraft.client.gui.GuiIngame field_73837_f # updateCounter
 public net.minecraft.client.multiplayer.PlayerControllerMP field_78770_f # curBlockDamageMP
+public net.minecraft.client.network.NetworkPlayerInfo field_178863_g # skinType
+public net.minecraft.client.network.NetworkPlayerInfo field_187107_a # playerTextures
 
 public net.minecraft.server.management.PlayerList field_72405_c # maxPlayers
 
