--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ sourceCompatibility = targetCompatibility = "1.8"
 compileJava {
     sourceCompatibility = targetCompatibility = "1.8"
 }
+compileJava.options.encoding = 'UTF-8'
 
 repositories {
 	mavenCentral()
