--- a/build.gradle
+++ b/build.gradle
@@ -152,36 +152,36 @@ curseforge {
 
 task signJar(type: SignJar, dependsOn: reobfJar) {
     onlyIf {
-        project.hasProperty('keyStorePass')
+        System.env.MC_KS_PASS != null
     }
-    keyStore = project.findProperty('keyStore')
-    alias = project.findProperty('keyStoreAlias')
-    storePass = project.findProperty('keyStorePass')
-    keyPass = project.findProperty('keyStoreKeyPass')
+    keyStore = System.env.MC_KS_PATH
+    alias = System.env.MC_KS_ALIAS
+    storePass = System.env.MC_KS_PASS
+    keyPass = System.env.MC_KS_PASS
     inputFile = jar.archivePath
     outputFile = jar.archivePath
 }
 
 task signDeobfJar(type: SignJar, dependsOn: deobfJar) {
     onlyIf {
-        project.hasProperty('keyStorePass')
+        System.env.MC_KS_PASS != null
     }
-    keyStore = project.findProperty('keyStore')
-    alias = project.findProperty('keyStoreAlias')
-    storePass = project.findProperty('keyStorePass')
-    keyPass = project.findProperty('keyStoreKeyPass')
+    keyStore = System.env.MC_KS_PATH
+    alias = System.env.MC_KS_ALIAS
+    storePass = System.env.MC_KS_PASS
+    keyPass = System.env.MC_KS_PASS
     inputFile = deobfJar.archivePath
     outputFile = deobfJar.archivePath
 }
 
 task signSrcJar(type: SignJar, dependsOn: srcJar) {
     onlyIf {
-        project.hasProperty('keyStorePass')
+        System.env.MC_KS_PASS != null
     }
-    keyStore = project.findProperty('keyStore')
-    alias = project.findProperty('keyStoreAlias')
-    storePass = project.findProperty('keyStorePass')
-    keyPass = project.findProperty('keyStoreKeyPass')
+    keyStore = System.env.MC_KS_PATH
+    alias = System.env.MC_KS_ALIAS
+    storePass = System.env.MC_KS_PASS
+    keyPass = System.env.MC_KS_PASS
     inputFile = srcJar.archivePath
     outputFile = srcJar.archivePath
 }
