Fixed server crash, added sanity check before pushing the IBakedModel map. (Uggghhhh VanillaFix >:|)

--- a/src/main/resources/hc_at.cfg
+++ b/src/main/resources/hc_at.cfg
@@ -1,3 +1,4 @@
+public net.minecraft.client.renderer.BlockModelShapes field_178129_a # bakedModelStore
 public net.minecraft.client.renderer.texture.TextureAtlasSprite func_130102_n()V # resetSprite
 public net.minecraft.client.renderer.texture.TextureAtlasSprite func_147962_a([[IIII)[[I # getFrameTextureData
 public net.minecraft.client.renderer.texture.TextureAtlasSprite field_110982_k # animationMetadata
