New shader pipeline, made to reduce memory usage compared to old one.

--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ configFile.withReader {
 }
 
 version = "${config.mod_version}"
-group = "com.pengu.hammercore"
-archivesBaseName = "HammerCore-${config.minecraft_version}"
+group = "tk.zeitheron.hammerlib"
+archivesBaseName = "HammerLib-${config.minecraft_version}"
 
 sourceCompatibility = targetCompatibility = "1.8"
 compileJava {
