--- a/build.gradle
+++ b/build.gradle
@@ -145,12 +145,6 @@ curseforge {
 		mainArtifact(jar) {
 		  displayName = "[${config.minecraft_version}] ${config.mod_name} - ${config.mod_version}"
 		}
-		addArtifact(deobfJar) {
-		  displayName = "[${config.minecraft_version}] ${config.mod_name} (Deobfuscated) - ${config.mod_version}"
-		}
-		addArtifact(srcJar) {
-		  displayName = "[${config.minecraft_version}] ${config.mod_name} (Sources) - ${config.mod_version}"
-		}
 	}
 }
 
@@ -193,16 +187,16 @@ task signSrcJar(type: SignJar, dependsOn: srcJar) {
 task makeChangelog(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
     file = new File("changelog.html")
     untaggedName = "Version ${project.version}"
-    fromCommit = config.startGitRev
+    fromCommit = config.start_git_commit
     toRef =  "HEAD"
     gitHubIssuePattern = "nonada123";
     templateContent = """
 {{#tags}}
+<h3><a href="https://github.com/dragon-forge/maven">To get developer builds, consult our maven repository</a></h3>
 <h1>Changes:</h1>
   <ul>
     {{#commits}}
-    <li> <a href="https://gitlab.com/DragonForge/HammerCore/commit/{{hash}}" target=_blank> {{{message}}}</a>
-</li>
+    <li> {{{message}}}</li>
     {{/commits}}
   </ul>
 {{/tags}}
