Fixed #136, #139, added some packet wrappers and avoided several reflection calls in favor of hc_at.cfg as well as some general networking improvements.

--- a/src/main/resources/hc_at.cfg
+++ b/src/main/resources/hc_at.cfg
@@ -1,3 +1,4 @@
+public net.minecraft.client.Minecraft field_110452_an # metadataSerializer
 public net.minecraft.client.renderer.BlockModelShapes field_178129_a # bakedModelStore
 public net.minecraft.client.renderer.texture.TextureAtlasSprite func_130102_n()V # resetSprite
 public net.minecraft.client.renderer.texture.TextureAtlasSprite func_147962_a([[IIII)[[I # getFrameTextureData
@@ -64,6 +65,7 @@ public net.minecraft.client.gui.inventory.GuiFurnace field_147086_v # tileFurnac
 public net.minecraft.client.gui.GuiMainMenu field_73979_m # panoramaTimer
 public net.minecraft.client.gui.GuiMainMenu field_73975_c # splashText
 public net.minecraft.client.gui.GuiNewChat field_146253_i # drawnChatLines
+public net.minecraft.client.gui.GuiNewChat field_146252_h # chatLines
 public net.minecraft.client.gui.GuiChat field_146415_a # inputField
 public net.minecraft.client.gui.GuiIngame field_73837_f # updateCounter
 public net.minecraft.client.multiplayer.PlayerControllerMP field_78770_f # curBlockDamageMP
@@ -71,6 +73,8 @@ public net.minecraft.client.network.NetworkPlayerInfo field_178863_g # skinType
 public net.minecraft.client.network.NetworkPlayerInfo field_187107_a # playerTextures
 
 public net.minecraft.server.management.PlayerList field_72405_c # maxPlayers
+
+public-f net.minecraft.item.ItemStack field_151002_e # item
 
 public net.minecraft.util.EnumParticleTypes field_179365_U # PARTICLES
 public net.minecraft.util.EnumParticleTypes field_186837_Z # BY_NAME
