A few little adapters as well as registerIf functionality for recipe builders.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -6,3 +6,6 @@ public net.minecraft.inventory.container.Container *
 public net.minecraft.tileentity.AbstractFurnaceTileEntity *
 public net.minecraft.item.crafting.RecipeManager *
 public net.minecraft.item.crafting.RecipeManager field_199522_d # recipes
+public net.minecraft.client.renderer.chunk.ChunkRenderCache field_217340_h # blockStates
+
+public net.minecraft.potion.PotionBrewing func_193357_a(Lnet/minecraft/potion/Potion;Lnet/minecraft/item/Item;Lnet/minecraft/potion/Potion;)V # addMix
