--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -12,7 +12,7 @@ logoFile="logo.png" #optional
 authors="Zeitheron" #optional
 description='''
 HammerLib is an essential tool for developing mods easily.
-Packed with a lot of utilities, this library provides nearly anything a modder would need, in one handy mod!
+Packed with a lot of utilities, this library provides nearly anything a modder would need, in one handy package!
 '''
 [[dependencies.hammerlib]]
     modId="forge"
