Fix #146 crash, generalized tag modification and it actually works now. TagAdapter is used to add items and blocks to named tags. Also removed some creepy reflections, and added optional event logging.

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ minecraft {
         client {
             workingDirectory project.file('run/client')
             property 'forge.logging.console.level', 'debug'
-            setArgs(Arrays.asList("--mixin mixins.${config.mod_id}.json -Dmixin.env.disableRefMap=true".split(' ')))
+            setArgs(Arrays.asList("--mixin mixins.${config.mod_id}.json".split(' ')))
             mods {
                 examplemod {
                     source sourceSets.main
@@ -65,7 +65,7 @@ minecraft {
         server {
             workingDirectory project.file('run/server')
             property 'forge.logging.console.level', 'debug'
-            setArgs(Arrays.asList("--mixin mixins.${config.mod_id}.json -Dmixin.env.disableRefMap=true".split(' ')))
+            setArgs(Arrays.asList("--mixin mixins.${config.mod_id}.json".split(' ')))
             mods {
                 examplemod {
                     source sourceSets.main
