--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,5 +2,5 @@ public net.minecraft.client.Minecraft *
 public net.minecraft.world.inventory.AbstractContainerMenu *
 public net.minecraft.world.item.crafting.RecipeManager *
 public-f net.minecraft.client.resources.language.ClientLanguage f_118910_ # storage
-public-f net.minecraft.tags.SetTag * # for tag handling
+public-f net.minecraft.tags.Tag * # for tag handling
 public net.minecraft.world.item.alchemy.PotionBrewing m_43513_(Lnet/minecraft/world/item/alchemy/Potion;Lnet/minecraft/world/item/Item;Lnet/minecraft/world/item/alchemy/Potion;)V # addMix
