--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,12 +17,12 @@ Packed with a lot of utilities, this library provides nearly anything a modder w
 [[dependencies.hammerlib]]
     modId="forge"
     mandatory=true
-    versionRange="[38.0.75,)"
+    versionRange="[40.,)"
     ordering="NONE" # NONE/BEFORE/AFTER
     side="BOTH"
 [[dependencies.hammerlib]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.18.,1.19)"
+    versionRange="[1.18.2,1.19)"
     ordering="NONE"
     side="BOTH"
