--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,4 @@ public net.minecraft.world.inventory.AbstractContainerMenu *
 public net.minecraft.world.item.crafting.RecipeManager *
 public-f net.minecraft.tags.Tag * # for tag handling
 public net.minecraft.world.item.alchemy.PotionBrewing m_43513_(Lnet/minecraft/world/item/alchemy/Potion;Lnet/minecraft/world/item/Item;Lnet/minecraft/world/item/alchemy/Potion;)V # addMix
+public net.minecraft.client.renderer.texture.HttpTexture *
