Added emissive player rendering. I want to expand on this feature more later. For now, a fixed remote server for handling emissive CDN was made. Potentially going to move it into a local-based system, which will be stored on users PC.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,5 @@
 public net.minecraft.client.Minecraft *
+public net.minecraft.client.player.AbstractClientPlayer m_108558_()Lnet/minecraft/client/multiplayer/PlayerInfo; # getPlayerInfo
 public net.minecraft.world.inventory.AbstractContainerMenu *
 public net.minecraft.world.item.crafting.RecipeManager *
 public-f net.minecraft.tags.Tag * # for tag handling
