--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,8 +6,8 @@ license="All rights reserved"
 modId="hammerlib"
 version="${file.jarVersion}"
 displayName="HammerLib"
-updateJSONURL="http://dccg.herokuapp.com/api/fmluc/247401"
-displayURL="http://dccg.herokuapp.com/api/fmlhp/247401"
+updateJSONURL="http://h.zeith.org/api/fmluc/247401"
+displayURL="http://h.zeith.org/api/fmlhp/247401"
 logoFile="logo.png" #optional
 authors="Zeitheron" #optional
 description='''
