Added BaseCompat and CompatList, to simplify working with mod-based compatibilities. Use CompatList#gather to collect all compats of your given type. Delete PackRepositoryMixin, and instead use Forge's event inside ResourcePackAdapter.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,7 +17,7 @@ Packed with a lot of utilities, this library provides nearly anything a modder w
 [[dependencies.hammerlib]]
     modId="forge"
     mandatory=true
-    versionRange="[43.,)"
+    versionRange="[43.2,)"
     ordering="NONE" # NONE/BEFORE/AFTER
     side="BOTH"
 [[dependencies.hammerlib]]
