CreativeTab fixes and refactors to get ready for 1.19.3.

--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,7 @@ dependencies {
 
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 
-    implementation fg.deobf("com.lowdragmc.shimmer:Shimmer-forge:1.19.2-${config.shimmer_version}")
+    // implementation fg.deobf("com.lowdragmc.shimmer:Shimmer-forge:1.19.2-${config.shimmer_version}")
 
     def libraries = file("libraries");
     if (!libraries.isDirectory()) libraries.mkdirs()
