--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,28 +1,31 @@
-modLoader="javafml"
-loaderVersion="[43,)"
-issueTrackerURL="https://gitlab.com/DragonForge/HammerLib/issues"
-license="All rights reserved"
+modLoader = "javafml"
+loaderVersion = "[44,)"
+issueTrackerURL = "https://gitlab.com/DragonForge/HammerLib/issues"
+license = "All rights reserved"
 [[mods]]
-modId="hammerlib"
-version="${file.jarVersion}"
-displayName="HammerLib"
-updateJSONURL="http://h.zeith.org/api/fmluc/247401"
-displayURL="http://h.zeith.org/api/fmlhp/247401"
-logoFile="logo.png" #optional
-authors="Zeitheron" #optional
-description='''
+modId = "hammerlib"
+version = "${file.jarVersion}"
+displayName = "HammerLib"
+updateJSONURL = "http://h.zeith.org/api/fmluc/247401"
+displayURL = "http://h.zeith.org/api/fmlhp/247401"
+logoFile = "logo.png"
+authors = "Zeitheron"
+
+description = '''
 HammerLib is an essential tool for developing mods easily.
 Packed with a lot of utilities, this library provides nearly anything a modder would need, in one handy package!
 '''
+
 [[dependencies.hammerlib]]
-    modId="forge"
-    mandatory=true
-    versionRange="[43.2,)"
-    ordering="NONE" # NONE/BEFORE/AFTER
-    side="BOTH"
+modId = "forge"
+mandatory = true
+versionRange = "[44.1,)"
+ordering = "NONE" # NONE/BEFORE/AFTER
+side = "BOTH"
+
 [[dependencies.hammerlib]]
-    modId="minecraft"
-    mandatory=true
-    versionRange="[1.19.2,1.20)"
-    ordering="NONE"
-    side="BOTH"
+modId = "minecraft"
+mandatory = true
+versionRange = "[1.19.3,1.20)"
+ordering = "NONE"
+side = "BOTH"
