--- a/build.gradle
+++ b/build.gradle
@@ -81,12 +81,16 @@ repositories {
         url = "https://maven.zeith.org"
     }
     maven { setUrl("https://oss.sonatype.org/content/repositories/public/") }
-    flatDir { dirs 'libraries/all' }
-    flatDir { dirs 'libraries/classpathOnly' }
-    flatDir { dirs 'libraries/runtimeOnly' }
+    flatDir { dirs "libraries/${config.mc_version}/all" }
+    flatDir { dirs "libraries/${config.mc_version}/classpathOnly" }
+    flatDir { dirs "libraries/${config.mc_version}/runtimeOnly" }
+    flatDir { dirs "libraries/embedded" }
 }
 
 import net.minecraftforge.gradle.common.tasks.SignJar
+
+import java.nio.file.Files
+import java.nio.file.StandardOpenOption
 
 dependencies {
     minecraft "net.minecraftforge:forge:${config.mc_version}-${config.forge_version}"
@@ -94,7 +98,7 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
     implementation fg.deobf("com.lowdragmc.shimmer:Shimmer-forge:${config.mc_version}-${config.shimmer_version}")
 
-    def libraries = file("libraries");
+    def libraries = new File(file("libraries"), "${config.mc_version}")
     if (!libraries.isDirectory()) libraries.mkdirs()
 
     def libDir = new File(libraries, "all");
@@ -135,6 +139,24 @@ dependencies {
                 runtimeClasspath fg.deobf(project.dependencies.create("_runtime:$modartifact:$modversion") {
                     transitive = false
                 })
+            }
+        }
+    } else libDir.mkdir();
+
+    libDir = new File(file("libraries"), "embedded");
+    if (libDir.isDirectory()) {
+        libDir.eachFile { file ->
+            def splitPos = file.name.lastIndexOf("-")
+            def modartifact = file.name.substring(0, splitPos)
+            def modversion = file.name.substring(splitPos + 1, file.name.length() - 4)
+            def modreference = "lib:$modartifact:$modversion"
+
+            dependencies {
+                def dep = project.dependencies.create(modreference) {
+                    transitive = false
+                }
+                implementation dep
+                shadow dep
             }
         }
     } else libDir.mkdir();
@@ -239,4 +261,25 @@ publishing {
             url "file:///SERVER//Maven"
         }
     }
+}
+
+// This piece of garbage will ensure that the build number is updated after build is executed.
+tasks.build.doLast {
+    if(!hasConfig("build_candidate") || !Boolean.parseBoolean(config.build_candidate))
+    {
+        def buildTxt = configFile.toPath();
+        List<String> lines = Files.readAllLines buildTxt;
+        lines.replaceAll { String ln ->
+            if(ln.startsWith("mod_version"))
+            {
+                def version = ln.split("=")[1];
+                def dot = version.lastIndexOf('.') + 1;
+                def newVersion = version.substring(0, dot);
+                def lastOne = Integer.parseInt(version.substring(dot)) + 1;
+                return "mod_version=" + newVersion + lastOne;
+            }
+            return ln;
+        }
+        Files.write buildTxt, lines, StandardOpenOption.CREATE;
+    } else println "Build candidate enabled, we are not increasing build number after this."
 }
