--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ minecraft {
             mods {
                 examplemod {
                     source sourceSets.main
+                    resource sourceSets.main.resources
                 }
             }
         }
@@ -73,6 +74,7 @@ minecraft {
             mods {
                 examplemod {
                     source sourceSets.main
+                    resource sourceSets.main.resources
                 }
             }
         }
